refactored code and redid several functions to place cards on browser page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Pair Game</title>
-    <script src = 'game.js'></script>
+    <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
 
+    <button>Deal!</button>
+
+    <div class = 'show'></div>
+
+    <script type="text/javascript" src = 'game.js'></script>
+    <script type="text/javascript" src = 'dom.js'></script>
   </body>
 </html>
